maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:16: error: missing argument list for method aMurNord in class ShortestPathMaze
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `aMurNord _` or `aMurNord(_,_)` instead of `aMurNord`.
    if (!aMurNord) {
         ^ShortestPathMaze:20: error: missing argument list for method aMurOuest in class ShortestPathMaze
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `aMurOuest _` or `aMurOuest(_,_)` instead of `aMurOuest`.
    if (!aMurOuest) {
         ^ShortestPathMaze:23: error: not found: value aMurSud
    if (!aMurSud) {
         ^ShortestPathMaze:26: error: not found: value aMurEst
    if (!aMurEst) {
         ^