maze.shortestpath.ShortestPathMaze.scala.code
var x = 0
var y = 0
var cpt = 0
override def run() {
	for (i<-1 to getMondeLargeur-1) {
    for (j<-1 to getMondeHauteur-1) {
      if (aBiscuit(i,j)) {
        setIndication(i,j,0)
        x=i
        y=j
      }
    }
  }
  while (true) {
    if (!aMurNord) {
      setIndication(x+1,y,cpt)
      cpt+=1
    }
    if (!aMurOuest) {
      setIndication(x,y-1,cpt)
    }
    if (!aMurSud) {
      setIndication(x-1,y,cpt)
    }
    if (!aMurEst) {
      setIndication(x,y+1,cpt)
    }
  }
}